added basic components

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 <body>
     <div id="initialLoader" style="position: absolute; top: 0; left: 0; width: 100%; height: 50%;"></div>
     <div id="container"></div>
-    <script async src="/public/bundle.js"></script>
+    <script async src="/static/bundle.js"></script>
 </body>
 </html>
