google font and header done

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://img1a.flixcart.com"/>
     <link rel="dns-prefetch" href="https://img1a.flixcart.com"/>
     <link rel="dns-prefetch" href="https://rukminim1.flixcart.com"/>
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
 </head>
 <body>
     <div id="container"></div>
