--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8"/>
-    <link rel="preconnect" href="https://img1a.flixcart.com"/>
-    <link rel="dns-prefetch" href="https://img1a.flixcart.com"/>
-    <link rel="dns-prefetch" href="https://rukminim1.flixcart.com"/>
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet"/>
 </head>
 <body>
     <div id="container"></div>
